Fixing BR #113611 (SIGSEGV in Observing List tool).

Added a "SkyObject *oCurrent" member to keep track of the 
currently-selected object.  THis had been fixed in the 3.5 branch 
already, but I didn't backport because I didn't realize there would be a 
3.4.3 release.

Also updated version number in the 3.4 branch to to 1.1.3 for the 
kde-3.4.3 release.

BUG: 113611


svn path=/branches/KDE/3.4/kdeedu/kstars/; revision=465866